# ImageBind

./: README.md  pyproject.toml
imagebind/: data.py
imagebind/models/: imagebind_model.py
