[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "imagebind"
version = "1.0.0"
description = "Fork of ImageBind"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'torch>=1.13.1',
  'torchvision',
  'torchaudio',
  'pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@ae9cfc6e62ca49eb9721a7a56e1e13e348ad21dc',
  'timm >= 1.0.12',
  'ftfy',
  'regex',
  'einops',
  'fvcore',
  'iopath',
  'numpy>=1.19',
  'matplotlib',
  'types-regex',
  'mayavi',
  'cartopy',
]

[tool.hatch.build.targets.wheel]
packages = ["imagebind"]
